--- a/Arq_Discos/src/Formularios/form_tiempo_busqueda.form
+++ b/Arq_Discos/src/Formularios/form_tiempo_busqueda.form
@@ -79,7 +79,7 @@
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="0"/>
-                <Property name="text" type="java.lang.String" value="DiscosXD"/>
+                <Property name="text" type="java.lang.String" value="Selecci&#xf3;n de opciones"/>
                 <Property name="opaque" type="boolean" value="true"/>
               </Properties>
               <Constraints>
@@ -340,6 +340,7 @@
                 <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
                   <ComponentRef name="bGVelR"/>
                 </Property>
+                <Property name="selected" type="boolean" value="true"/>
                 <Property name="text" type="java.lang.String" value="RPM"/>
                 <Property name="name" type="java.lang.String" value="radBRPM" noResource="true"/>
               </Properties>
